# vaultkey

./: .gitignore  FEATURE_ROADMAP.md  IMMEDIATE_MARKETING.md  LICENSE  MARKETING_PLAN.md  Manifest.in  README.md  SECURITY_ENHANCEMENTS.md  VaultKey.spec  analytics_example.py  build.sh  create_universal_package.sh  install.sh  publish.sh  pyproject.toml  requirements.txt  run_vaultkey.py  setup.py  test_lastpass.csv  vaultkey.py
.github/workflows/: build.yml  workflow.yml
build-scripts/: build-mac-installer.sh  build-windows-installer.bat
vaultkey/: __init__.py  breach.py  cli.py  crypto.py  generator.py  manager.py  portability.py  storage.py  strength.py
vaultkey.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vaultkey_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
